# mobile-rust-library-example

./: Makefile  README.md
bindings/kotin/uniffi/dogs/: dogs.kt
bindings/swift/: dogs.swift  dogsFFI.h  dogsFFI.modulemap
example_apps/android/: .gitignore
example_apps/android/HelloDog/: settings.gradle.kts
example_apps/android/HelloDog/app/: build.gradle.kts
example_apps/android/HelloDog/app/src/main/: AndroidManifest.xml
example_apps/android/HelloDog/app/src/main/java/com/example/hellodog/: MainActivity.kt
example_apps/android/HelloDog/app/src/main/res/values/: strings.xml  themes.xml
example_apps/android/HelloDog/gradle/wrapper/: gradle-wrapper.properties
example_apps/android/app/: build.gradle.kts
example_apps/android/app/src/main/java/com/example/dogs/: MainActivity.kt
example_apps/android/gradle/wrapper/: gradle-wrapper.properties
example_apps/ios/: .gitignore
example_apps/ios/HelloDog/Frameworks/dogs.xcframework/: Info.plist
example_apps/ios/HelloDog/Frameworks/dogs.xcframework/ios-arm64/: Headers
example_apps/ios/HelloDog/HelloDog/: ContentView.swift  HelloDogApp.swift  dogs.swift
example_apps/ios/HelloDog/HelloDog.xcodeproj/: project.pbxproj
example_apps/ios/HelloDog/HelloDogTests/: HelloDogTests.swift
example_apps/ios/HelloDog/HelloDogUITests/: HelloDogUITests.swift  HelloDogUITestsLaunchTests.swift
example_apps/ios/HelloDog/RustLib/include/: dogsFFI.h
rust/: .gitignore  Cargo.toml  Makefile
rust/dogs/: Cargo.toml
rust/dogs/src/: fetch.rs  lib.rs  types.rs
rust/src/: fetch.rs  main.rs
rust/uniffi-bindgen/: Cargo.toml
(+5 files in other folders)
