[package]
name = "dogs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"

uniffi = { version = "0.29.2", features = ["cli"] }


[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }
